--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,89 @@
-body {
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: Arial, sans-serif;
+}
+.bannier{
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(../img/baner.jpg);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
+.navbar{
+    width: 85%;
+    margin: auto;
+    padding: 35px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo{
+    width: 120px;
+    cursor: pointer;
+    color: #009688;
+}
+
+.contenu{
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    color: #fff;
+}
+.contenu h1{
+    font-size: 70px;
+    margin-bottom: 80px;
+}
+.contenu p{
+    font-size: 20px;
+    margin: 20px auto;
+    font-weight: 100;
+    line-height: 25px;
+}
+button{
+    width: 200px;
+    padding: 15px 30px;
+    margin: 20px 10px;
+    border-radius: 25px;
+    border: 2px solid #009688;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.2s;
+    background: transparent;
+    color: #fff;
+    position: relative;
+    overflow: hidden;
+}
+button a{
+    text-decoration: none;
+    color: #fff;
+}
+span{
+    background: #009688;
+    height: 100%;
+    width: 0;
+    border-radius: 25px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+    transition: 0.5s;
+}
+button:hover span{
+    width: 100%;
+}
+button:hover{
+    border: none;
+}
+
+/* body {
+    
     background-color: #f0f0f0;
 }
 
@@ -26,4 +110,4 @@ h1 {
 
 .btn:hover {
     background-color: #0056b3;
-}
+} */
