--- a/CSS/inscon.css
+++ b/CSS/inscon.css
@@ -1,4 +1,3 @@
-/* Styles communs aux pages d'inscription et de connexion */
 body {
     font-family: Arial, sans-serif;
     background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(../img/login.jpg);
@@ -20,8 +19,8 @@ body {
     border-radius: 5px;
     padding: 30px;
     max-width: 400px;
-    width: 80%; /* Réduisez la largeur du conteneur */
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Ajoutez une ombre légère */
+    width: 80%;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
 }
 
 h1 {
@@ -33,7 +32,7 @@ label {
     display: block;
     font-weight: bold;
     margin-top: 10px;
-    text-align: left; /* Alignez les labels à gauche */
+    text-align: left; 
 }
 
 input[type="text"],
@@ -72,12 +71,11 @@ button:hover {
     font-weight: bold;
 }
 
-/* Styles spécifiques à la page d'inscription */
+
 #registrationForm {
     text-align: left;
 }
 
-/* Styles spécifiques à la page de connexion */
 #loginForm {
     text-align: left;
 }
